--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <span class="author-block">
                                 <a href="Fifth AUTHOR PERSONAL LINK" target="_blank">Shuo Yang</a><sup>3</sup></span>
                             <span class="author-block">
-                                <a href="Forth AUTHOR PERSONAL LINK" target="_blank">Bo Zhao</a><sup>1</sup></span>
+                                <a href="Sixth AUTHOR PERSONAL LINK" target="_blank">Bo Zhao</a><sup>1</sup></span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
