--- a/index.html
+++ b/index.html
@@ -184,22 +184,22 @@
     <!-- End paper abstract -->
 
     <section class="section">
-        <div class="container is-max-desktop">
-            <h2 class="title is-2 has-text-centered">Overview of RoboFAC</h2>
+        <div class="container">
+            <h2 class="title is-2 has-text-centered">RoboFAC Dataset</h2>
             <div class="columns is-centered">
                 <div class="column is-four-fifths">
                     <div class="content">
-                        <figure class="image is-3by2">
+                        <figure class="image" style="width: 90%; margin: 0 auto;">
                             <img src="static/images/overview_v2.svg" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
-                            Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
+                            Overview of RoboFAC dataset. Left: The RoboFAC dataset features both task diversity
                             and visual diversity, encompassing tasks of varying complexity, real-world tasks, and
                             various of backgrounds and camera viewpoints. We provide detailed video question-answer
                             annotations for eight distinct question types.
                         </p>
-                        <figure class="image is-3by2">
-                            <img src="static/images/pipeline_v3.svg" alt="RoboFAC Experimental Setup">
+                        <figure class="image">
+                            <img src="static/images/dataset1.svg" alt="RoboFAC Experimental Setup">
                         </figure>
                         <p class="has-text-centered">
                             Overview of our RoboFAC framework. \textbf{Top:} The pipeline of constructing the RoboFAC
@@ -218,13 +218,13 @@
 
     <!-- 这里放一个我们的测试数据的情况 -->
     <section class="section">
-        <div class="container is-max-desktop">
+        <div class="container">
             <h2 class="title is-3 has-text-centered">Evaluation on RoboFAC Bench</h2>
             <div class="columns is-centered">
                 <div class="column is-four-fifths">
                     <div class="content">
-                        <figure class="image is-3by2">
-                            <img src="static/images/overview_v2.svg" alt="RoboFAC System Architecture">
+                        <figure class="image">
+                            <img src="static/images/result.svg" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
                             Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
@@ -236,19 +236,28 @@
                 </div>
             </div>
         </div>
-    </section>、
+    </section>
 
     <!-- 这里放一个真机的demo的情况 -->
 
     <!-- 这里放真机的结果 -->
     <section class="section">
-        <div class="container is-max-desktop">
+        <div class="container">
             <h2 class="title is-3 has-text-centered">Realworld Control Result</h2>
             <div class="columns is-centered">
                 <div class="column is-four-fifths">
                     <div class="content">
-                        <figure class="image is-3by2">
-                            <img src="static/images/overview_v2.svg" alt="RoboFAC System Architecture">
+                        <figure class="image">
+                            <img src="static/images/realworld.png" alt="RoboFAC System Architecture">
+                        </figure>
+                        <p class="has-text-centered">
+                            Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
+                            and visual diversity, encompassing tasks of varying complexity, real-world tasks, and
+                            various of backgrounds and camera viewpoints. We provide detailed video question-answer
+                            annotations for eight distinct question types.
+                        </p>
+                        <figure class="image">
+                            <img src="static/images/realworld_demo.svg" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
                             Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
