--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <title>RoboFAC: A Comprehensive Framework for Robotic Failure Analysis and Correction</title>
-    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="static/images/robot.ico">
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
     <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -153,7 +153,7 @@
 
     <!-- Paper abstract -->
     <section class="section hero is-light">
-        <div class="container is-max-desktop">
+        <div class="container">
             <div class="columns is-centered has-text-centered">
                 <div class="column is-four-fifths">
                     <h2 class="title is-3">Abstract</h2>
@@ -185,6 +185,24 @@
 
     <section class="section">
         <div class="container">
+            <h2 class="title is-2 has-text-centered">RoboFAC Framework</h2>
+            <div class="columns is-centered">
+                <div class="column is-four-fifths">
+                    <div class="content">
+                        <figure class="image" style="width: 90%; margin: 0 auto;">
+                            <img src="static/images/pipeline_v3.svg" alt="RoboFAC System Architecture">
+                        </figure>
+                        <p class="has-text-centered">
+                            Overview of our RoboFAC framework.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
             <h2 class="title is-2 has-text-centered">RoboFAC Dataset</h2>
             <div class="columns is-centered">
                 <div class="column is-four-fifths">
@@ -193,20 +211,13 @@
                             <img src="static/images/overview_v2.svg" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
-                            Overview of RoboFAC dataset. Left: The RoboFAC dataset features both task diversity
-                            and visual diversity, encompassing tasks of varying complexity, real-world tasks, and
-                            various of backgrounds and camera viewpoints. We provide detailed video question-answer
-                            annotations for eight distinct question types.
+                            Overview of RoboFAC dataset.
                         </p>
                         <figure class="image">
                             <img src="static/images/dataset1.svg" alt="RoboFAC Experimental Setup">
                         </figure>
                         <p class="has-text-centered">
-                            Overview of our RoboFAC framework. \textbf{Top:} The pipeline of constructing the RoboFAC
-                            dataset. \textbf{Bottom-left:} We build our RoboFAC model by fine-tuning Qwen2.5-VL model.
-                            The RoboFAC model can perform Task Understanding, Failure analysis and Failure correction.
-                            \textbf{Bottom-right:} We deploy RoboFAC model on real-world VLA control tasks, and it
-                            effectively helps the VLA recover from failure.
+                            Statistics of the RoboFAC Dataset.
                         </p>
                     </div>
                 </div>
@@ -214,7 +225,61 @@
         </div>
     </section>
 
-    <!-- 这边放我们的数据集的展示视频，但是还没有确定要怎么放 -->
+    <section class="hero is-small">
+        <div class="hero-body">
+            <div class="container">
+                <h2 class="title is-3">Dataset Video Show</h2>
+                <div class="video-carousel">
+                    <div class="video-pair">
+                        <video src="static/videos/video1.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video2.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video3.mp4" autoplay controls muted loop></video>
+                    </div>
+                    <div class="video-pair">
+                        <video src="static/videos/video4.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video5.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video6.mp4" autoplay controls muted loop></video>
+                    </div>
+                    <div class="video-pair">
+                        <video src="static/videos/video7.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video8.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video9.mp4" autoplay controls muted loop></video>
+                    </div>
+                    <div class="video-pair">
+                        <video src="static/videos/video10.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video11.mp4" autoplay controls muted loop></video>
+                        <video src="static/videos/video12.mp4" autoplay controls muted loop></video>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <style>
+        .video-carousel {
+            display: flex;
+            overflow-x: auto;
+            /* 横向滚动 */
+            scroll-snap-type: x mandatory;
+            /* 滚动时自动对齐 */
+            gap: 1rem;
+            /* 视频对之间的间距 */
+            padding: 1rem 0;
+        }
+
+
+        .video-pair video {
+            width: 400px;
+            /* 你可以自定义想要的宽度 */
+            aspect-ratio: 1/1;
+            /* 保证 1:1 比例 */
+            object-fit: cover;
+            /* 填充整个视频容器 */
+            border-radius: 0.6rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+    </style>
 
     <!-- 这里放一个我们的测试数据的情况 -->
     <section class="section">
@@ -227,10 +292,7 @@
                             <img src="static/images/result.svg" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
-                            Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
-                            and visual diversity, encompassing tasks of varying complexity, real-world tasks, and
-                            various of backgrounds and camera viewpoints. We provide detailed video question-answer
-                            annotations for eight distinct question types.
+                            Scores for different dimensions on RoboFAC Benchmark
                         </p>
                     </div>
                 </div>
@@ -238,7 +300,44 @@
         </div>
     </section>
 
-    <!-- 这里放一个真机的demo的情况 -->
+    <section class="hero is-small">
+        <div class="hero-body">
+            <div class="container is-max-desktop">
+                <div id="results-carousel" class="carousel results-carousel">
+                    <div class="item">
+                        <img src="static/images/demo1.svg" alt="MY ALT TEXT" />
+                        <!-- <h2 class="subtitle has-text-centered">
+                            First image description.
+                        </h2> -->
+                    </div>
+                    <div class="item">
+                        <img src="static/images/demo2.svg" alt="MY ALT TEXT" />
+                        <!-- <h2 class="subtitle has-text-centered">
+                            Second image description.
+                        </h2> -->
+                    </div>
+                    <div class="item">
+                        <img src="static/images/demo3.svg" alt="MY ALT TEXT" />
+                        <!-- <h2 class="subtitle has-text-centered">
+                            Third image description.
+                        </h2> -->
+                    </div>
+                    <div class="item">
+                        <img src="static/images/demo4.svg" alt="MY ALT TEXT" />
+                        <!-- <h2 class="subtitle has-text-centered">
+                            Fourth image description.
+                        </h2> -->
+                    </div>
+                    <div class="item">
+                        <img src="static/images/demo5.svg" alt="MY ALT TEXT" />
+                        <!-- <h2 class="subtitle has-text-centered">
+                            Fourth image description.
+                        </h2> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- 这里放真机的结果 -->
     <section class="section">
@@ -247,138 +346,23 @@
             <div class="columns is-centered">
                 <div class="column is-four-fifths">
                     <div class="content">
-                        <figure class="image">
+                        <figure class="image" style="width: 80%; margin: 0 auto;">
                             <img src="static/images/realworld.png" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
-                            Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
-                            and visual diversity, encompassing tasks of varying complexity, real-world tasks, and
-                            various of backgrounds and camera viewpoints. We provide detailed video question-answer
-                            annotations for eight distinct question types.
+                            Success rate on real-world manipulation.
                         </p>
-                        <figure class="image">
+                        <figure class="image" style="width: 95%; margin: 0 auto;">
                             <img src="static/images/realworld_demo.svg" alt="RoboFAC System Architecture">
                         </figure>
                         <p class="has-text-centered">
-                            Overview of RoboFAC dataset. \textbf{Left:} The RoboFAC dataset features both task diversity
-                            and visual diversity, encompassing tasks of varying complexity, real-world tasks, and
-                            various of backgrounds and camera viewpoints. We provide detailed video question-answer
-                            annotations for eight distinct question types.
+                            Demo of failure correction in real-world tasks.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Image carousel -->
-    <section class="hero is-small">
-        <div class="hero-body">
-            <div class="container">
-                <div id="results-carousel" class="carousel results-carousel">
-                    <div class="item">
-                        <!-- Your image here -->
-                        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT" />
-                        <h2 class="subtitle has-text-centered">
-                            First image description.
-                        </h2>
-                    </div>
-                    <div class="item">
-                        <!-- Your image here -->
-                        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT" />
-                        <h2 class="subtitle has-text-centered">
-                            Second image description.
-                        </h2>
-                    </div>
-                    <div class="item">
-                        <!-- Your image here -->
-                        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT" />
-                        <h2 class="subtitle has-text-centered">
-                            Third image description.
-                        </h2>
-                    </div>
-                    <div class="item">
-                        <!-- Your image here -->
-                        <img src="static/images/carousel4.jpg" alt="MY ALT TEXT" />
-                        <h2 class="subtitle has-text-centered">
-                            Fourth image description.
-                        </h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End image carousel -->
-
-
-
-
-    <!-- Youtube video -->
-    <!-- <section class="hero is-small is-light">
-        <div class="hero-body">
-            <div class="container">
-                Paper video.
-                <h2 class="title is-3">Video Presentation</h2>
-                <div class="columns is-centered has-text-centered">
-                    <div class="column is-four-fifths">
-
-                        <div class="publication-video">
-                            Youtube embed code here
-                            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0"
-                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- End youtube video -->
-
-    <!-- 这边是一个放视频的方法，可以用 -->
-    <!-- Video carousel -->
-    <section class="hero is-small">
-        <div class="hero-body">
-            <div class="container">
-                <h2 class="title is-3">Another Carousel</h2>
-                <div id="results-carousel" class="carousel results-carousel">
-                    <div class="item item-video1">
-                        <video poster="" id="video1" autoplay controls muted loop height="100%">
-                            <!-- Your video file here -->
-                            <source src="static/videos/carousel1.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="item item-video2">
-                        <video poster="" id="video2" autoplay controls muted loop height="100%">
-                            <!-- Your video file here -->
-                            <source src="static/videos/carousel2.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="item item-video3">
-                        <video poster="" id="video3" autoplay controls muted loop height="100%">\
-                            <!-- Your video file here -->
-                            <source src="static/videos/carousel3.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End video carousel -->
-
-    <!-- Paper poster -->
-    <!-- <section class="hero is-small is-light">
-        <div class="hero-body">
-            <div class="container">
-                <h2 class="title">Poster</h2>
-
-                <iframe src="static/pdfs/sample.pdf" width="100%" height="550">
-                </iframe>
-
-            </div>
-        </div>
-    </section> -->
-    <!--End paper poster -->
-
 
     <!--BibTex citation -->
     <section class="section" id="BibTeX">
@@ -397,7 +381,6 @@
     </section>
     <!--End BibTex citation -->
 
-
     <footer class="footer">
         <div class="container">
             <div class="columns is-centered">
@@ -407,8 +390,8 @@
                         <p>
                             This page was built using the <a
                                 href="https://github.com/eliahuhorwitz/Academic-project-page-template"
-                                target="_blank">Academic Project Page Template</a> which was adopted from the <a
-                                href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
+                                target="_blank">Academic Project Page Template</a> which was adopted from the <a
+                                href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
                             You are free to borrow the source code of this website, we just ask that you link back to
                             this page in the footer. <br> This website is licensed under a <a rel="license"
                                 href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
@@ -420,12 +403,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- Statcounter tracking code -->
-
-    <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
-
-    <!-- End of Statcounter Code -->
 
 </body>
 
